--- a/pets/index.html
+++ b/pets/index.html
@@ -295,6 +295,8 @@
     
     <p>Sample document listing for the collection <code class="language-plaintext highlighter-rouge">_pets</code>.</p>
 
+<h1 id="aqui-iria-el-liquid">Aqui iria el liquid</h1>
+
 
 
 <div class="entries-grid">
